# Object-and-Edge-Detection-on-Entity-Relationship-Diagrams

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
erd_detection/: main.py  preprocessing.py
erd_detection/line_detection/: line.py  lines2label.py  utils.py
erd_detection/object_detection/: detection.py
erd_detection/segmentation/: segmentation.py
erd_detection/text_detection/: inference.py
