[tool.poetry]
name = "object-and-edge-detection-on-entity-relationship-diagrams"
version = "0.1.0"
description = ""
authors = ["Maximilian Huber"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
albumentations = "^1.4.6"
shapely = "^2.0.4"
dill = "^0.3.8"
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
scikit-image = "^0.23.2"
torch = {version = "^2.3.0+cu121", source = "pytorch"}
torchvision = {version = "^0.18.0+cu121", source = "pytorch"}
ultralytics = "^8.2.15"
opencv-contrib-python = "^4.9.0.80"
transformers = "^4.44.2"
lightning = "^2.4.0"
albucore = "0.0.16"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
